--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Ini about</h1>
-  </body>
-</html>
+<div class="container">
+  <div class="row">
+    <div class="col text-center">
+      <img
+        src="img/mahiru-shiina.png"
+        alt="Mahiru Shiina"
+        class="img-thumbnail rounded-circle"
+        width="200px"
+      />
+      <h1 class="display-4">Mahiru Shiina</h1>
+      <p class="lead">Istri Ryutaaa | Malaikat</p>
+    </div>
+  </div>
+</div>
